2014-04-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure
	* debugger/mcs51/aclocal.m4
	* debugger/mcs51/configure
	* device/lib/pic14/aclocal.m4
	* device/lib/pic14/configure
	* device/lib/pic14/depcomp
	* device/lib/pic14/libm/Makefile.in
	* device/lib/pic14/libsdcc/enhanced-no-xinst/Makefile.in
	* device/lib/pic14/libsdcc/enhanced/Makefile.in
	* device/lib/pic14/libsdcc/regular/Makefile.in
	* device/lib/pic14/Makefile.in
	* device/lib/pic16/aclocal.m4
	* device/lib/pic16/configure
	* device/lib/pic16/depcomp
	* device/lib/pic16/install-sh
	* device/lib/pic16/libc/Makefile.in
	* device/lib/pic16/libio/Makefile.in
	* device/lib/pic16/libm/Makefile.in
	* device/lib/pic16/libsdcc/Makefile.in
	* device/lib/pic16/Makefile.in
	* device/lib/pic16/missing
	* device/lib/pic16/startup/Makefile.in
	* device/non-free/lib/pic14/configure
	* device/non-free/lib/pic16/aclocal.m4
	* device/non-free/lib/pic16/configure
	* device/non-free/lib/pic16/depcomp
	* device/non-free/lib/pic16/install-sh
	* device/non-free/lib/pic16/libdev/Makefile.in
	* device/non-free/lib/pic16/Makefile.in
	* device/non-free/lib/pic16/missing
	* sdccconf_in.h
	* sim/ucsim/aclocal.m4
	* sim/ucsim/configure
	* sim/ucsim/ltmain.sh
	* support/cpp/configure
	* support/packihx/configure: regenerated

2014-04-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure.in,
	* Makefile.in: manual edit to support option --disable-non-free

2014-04-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/INSTALL.txt,
	* support/scripts/sdcc.nsi: added dedication to Borut Razem
	* doc/README.txt: added STM8 target support

2014-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* Merged sdcc-stm8 branch into trunk.

2014-03-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Patch #233 by Pascal S, and further peepholes for improving io access.

2014-03-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/patch-235.c: