@@ -62,6 +62,7 @@ OPT_DISABLE_PACKIHX     = @OPT_DISABLE_PACKIHX@
 OPT_DISABLE_SDBINUTILS  = @OPT_DISABLE_SDBINUTILS@
 OPT_DISABLE_SDCPP       = @OPT_DISABLE_SDCPP@
 OPT_DISABLE_UCSIM       = @OPT_DISABLE_UCSIM@
+OPT_DISABLE_NON_FREE    = @OPT_DISABLE_NON_FREE@
 
 SLIB                    = $(top_builddir)/support/util
 
